# tibialy

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  Tibialy.spec  Tibialy_Debug.spec  bottle.py  build.py  build_mac.sh  database.yaml  pyproject.toml  tibialy_discord_cmd.py
.github/workflows/: release.yml
scripts/: compress_icon.py
src/: app.py  config.py  desktop_launcher.py  jobs.py  main.py  system.py  ui.py  update_check.py
src/alarms/: router.py
src/core/: helpers.py  logger.py  scheduler.py  websocket.py  ws.py
src/discord_tools/: db.py  router.py  sender.py
src/utilities/: db.py  router.py
static/: app.js  index.html
static/css/: global.css
static/css/themes/: bailando.css  dracula.css  light.css  nord.css  solarized-dark.css  spain.css  themes.json
static/data/: checklist.json
static/data/hunting/: asura_mirror.json  asura_palace.json  azzilon_castle_catacombs.json  energy_library.json  fire_library.json  index.json
static/js/: alarms.js  check_update.js  core.js  discord.js  hunting.js  imbuements.js  settings.js  stamina.js  tailwind-config.js  theme_selector.js  utilities.js
templates/: index.html
templates/partials/: alarms.html  discord.html  hunting.html  imbuements.html  settings.html  stamina.html  utilities.html
