[project]
name = "tibialy"
dynamic = ["version"]
description = "A set of helping tools for the mmorpg Tibia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "proxy-tools>=0.1.0",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.21.0",
    "pyttsx3>=2.99",
    "pywebview>=6.2.1",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyinstaller>=6.21.0",
    "pillow>=12.2.0",
    "ruff",
]

[tool.ruff]
extend-exclude = ["bottle.py"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
